[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-headless-auth"
version = "0.1.6"
description = "ðŸ” Production-ready Flask auth in one line. 20+ routes (JWT, OAuth, MFA, RBAC) instantly. Works with React/Next.js/Vue. Self-hosted, secure by default. Free Auth0/Clerk alternative ($3,600/year saved). Perfect for SPAs."
readme = "README.md"
authors = [
    { name = "Dhruv Agnihotri", email = "dagni@umich.edu" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Flask",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
]
keywords = [
    "flask",
    "flask-auth",
    "flask-authentication",
    "authentication",
    "auth",
    "jwt",
    "jwt-auth",
    "oauth",
    "oauth2",
    "google-oauth",
    "microsoft-oauth",
    "api",
    "api-auth",
    "rest-api",
    "headless",
    "headless-auth",
    "react",
    "react-auth",
    "nextjs",
    "nextjs-auth",
    "vue",
    "spa",
    "spa-auth",
    "rbac",
    "role-based-access-control",
    "mfa",
    "two-factor-auth",
    "2fa",
    "session-management",
    "token-auth",
    "access-token",
    "refresh-token",
    "httponly-cookies",
    "secure-auth",
    "password-reset",
    "email-verification",
    "user-management",
    "flask-jwt-extended",
    "flask-security",
    "flask-login-alternative",
    "auth0-alternative",
    "clerk-alternative",
    "supabase-alternative",
    "security",
    "backend-auth",
    "microservices",
    "production-ready"
]
dependencies = [
    "Flask>=2.0.0",
    "Flask-SQLAlchemy>=3.0.0",
    "Flask-JWT-Extended>=4.5.0",
    "Flask-Limiter>=3.3.0",
    "Flask-Caching>=2.0.0",
    "Flask-CORS>=4.0.0",
    "Flask-WTF>=1.1.0",
    "Flask-Talisman>=1.0.0",
    "Authlib>=1.2.0",
    "PyJWT>=2.8.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "Werkzeug>=2.0.0",
    "itsdangerous>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
]
email = [
    "brevo-python>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Dhruvagnihotri/flask-headless-auth"
Repository = "https://github.com/Dhruvagnihotri/flask-headless-auth"
Issues = "https://github.com/Dhruvagnihotri/flask-headless-auth/issues"
Documentation = "https://github.com/Dhruvagnihotri/flask-headless-auth#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["flask_headless_auth*"]
exclude = ["tests*", "examples*", "instance*"]

[tool.setuptools.package-data]
flask_headless_auth = ["*.yml", "*.yaml"]
